# MiniCortex

./: .gitignore  AGENTS.md  README.md  main.py  npp.py  pyproject.toml  train_hypercolumn_fdl_gpu.py  train_hypercolumn_fdl_gpu_cifar10.py  train_hypercolumn_fdl_gpu_mnist.py  train_hypercolumn_gpu.py
axonforge/core/: node.py
axonforge/network/: network.py
axonforge_qt/: bridge.py  computation_thread.py  main.py  main_window.py
axonforge_qt/canvas/: connection_item.py  editor_scene.py  editor_view.py  node_item.py  node_quick_add.py  port_item.py  z_layers.py
axonforge_qt/panels/: console.py  palette.py
axonforge_qt/themes/: dark.qss
minicortex/core/: node.py  registry.py
minicortex/network/: network.py
minicortex/nodes/: area.py  cortex.py  input.py  noise.py  utilities.py
minicortex/server/: __init__.py  lifecycle.py  models.py  server.py  state.py  websocket.py
minicortex_qt/: bridge.py  computation_thread.py  main.py  main_window.py
minicortex_qt/canvas/: connection_item.py  editor_scene.py  editor_view.py  node_item.py  port_item.py
minicortex_qt/dialogs/: save_workspace.py
minicortex_qt/panels/: console.py  palette.py
minicortex_qt/themes/: dark.qss
static/: index.html
static/css/: base.css  components.css  connections.css  drawer.css  layout.css  nodes.css  outputs.css  panels.css
static/js/: api.js  connections.js  context-menu.js  drawer.js  editor.js  main.js  nodes.js  outputs.js  properties.js  state.js  utils.js  workspaces.js
utils/: download_cifar10.py  download_mnist_datasets.py
workspaces/: kanka.json
(+73 files in other folders)
