[project]
name = "axonforge"
version = "0.1.0"
description = "A node-based computational framework with a PySide6 visual editor for building and simulating neural-inspired systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda13x>=14.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyside6>=6.7.0",
    "python-mnist>=0.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]

[project.scripts]
axonforge-qt = "axonforge_qt.main:main"
